# SPM-24

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  tests.md
analyze/: chart.ipynb
analyze/tests/: ff.csv  ff_server.csv  mpi_server.csv  seq_server.csv  sequential_server.csv
include/logger/: logger.hpp
scripts/: init.sh
src/: CMakeLists.txt  ff_main.cpp  main.cpp  mpi_main.cpp  s_main.cpp
src/compressor/: CMakeLists.txt  default.hpp  fastflow.cpp  fastflow.hpp  mpi.cpp  mpi.hpp  sequential.cpp  sequential.hpp  utils.cpp  utils.hpp
src/cui/: CMakeLists.txt  argparse.cpp  argparse.hpp  usage.hpp
tests/: fastflow.bash  mpi.bash  sequential.bash
tests/test0/: err  out
